[package]
name = "arsnova-client"
description = "ARSnova live feedback client library"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
authors = ["Paul-Christian Volkmer"]

[[example]]
name = "arsnova-client-tui"

[dependencies]
clap = { version = "4.4", features = ["std", "help", "usage", "derive", "error-context"], default-features = false }
ratatui = "0.26"
crossterm = "0.27"

futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"], default-features = false }
tokio-tungstenite = { version = "0.21", features = ["connect", "rustls-tls-webpki-roots"], default-features = false }
url = "2.5"
base64 = "0.22"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
